--- a/src/app/components/budget-actual/budget-actual.component.css
+++ b/src/app/components/budget-actual/budget-actual.component.css
@@ -1,13 +1,72 @@
-.demo-table{
-  overflow: auto;}
 button {
   margin: 16px 8px;
 }
 
-.mat-column-productionDate {
-  width: 100px;
-  border-right: 1px solid currentColor;
-  padding-right: 0px;
-  padding-left: 0px;
-  text-align: left;
+/*.container {*/
+/*  display: flex;*/
+/*  flex-direction: initial;*/
+/*}*/
+
+/* Toolbar */
+.spacer {
+  flex: 1 1 auto;
 }
+
+/* Filter */
+.form {
+  min-height: 56px;
+  max-height: 56px;
+  display: flex;
+  align-items: center;
+  padding: 8px 24px 0;
+  font-size: 20px;
+  justify-content: space-between;
+  border-bottom: 1px solid transparent;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  flex-grow: 1;
+  margin-top: 8px;
+}
+
+/* Mat table */
+.no-results {
+  display: flex;
+  justify-content: center;
+  padding: 14px;
+  font-size: 14px;
+  font-style: italic;
+}
+
+.mat-cell:nth-child(1),
+.mat-header-cell:nth-child(1){
+  margin-left: fill;
+  flex: 0 0 10%;
+}
+
+.mat-cell:nth-child(2),
+.mat-header-cell:nth-child(2){
+  flex: 0 0 4.5%;
+}
+
+.mat-cell:nth-child(3),
+.mat-header-cell:nth-child(3){
+  flex: 0 0 4.5%;
+}
+
+.mat-cell:nth-child(4),
+.mat-header-cell:nth-child(4){
+  flex: 0 0 4.5%;
+}
+
+.mat-cell:nth-child(5),
+.mat-header-cell:nth-child(5){
+  flex: 0 0 5%;
+}
+
+.mat-cell:nth-child(28),
+.mat-header-cell:nth-child(28){
+  flex: 5 5 1.5cm;
+}
+
