--- a/src/app/components/well-tabs/well-tabs.component.html
+++ b/src/app/components/well-tabs/well-tabs.component.html
@@ -1,19 +1,23 @@
 <mat-tab-group>
   <mat-tab label="Well General Info">
-    <app-well-general-info></app-well-general-info>
+    <app-well-general-info [id]="id"></app-well-general-info>
   </mat-tab>
   <mat-tab label="Well Drilling Info">
-    <app-drilling-info></app-drilling-info>
+    <app-drilling-info [id]="id"></app-drilling-info>
   </mat-tab>
   <mat-tab label="Well Intervals Info">
-    <app-intervals-info></app-intervals-info>
+    <app-intervals-info [id]="id"></app-intervals-info>
   </mat-tab>
-  <mat-tab label="Daily Actions">Soon</mat-tab>
+  <mat-tab label="Daily Actions">
+    <app-daily-actions [id]="id"></app-daily-actions>
+  </mat-tab>
   <mat-tab label="Well Test Data ">
-    <app-well-test-table></app-well-test-table>
+    <app-well-test-table [id]="id"></app-well-test-table>
   </mat-tab>
-  <mat-tab label="Lab Measurements ">Soon</mat-tab>
+  <mat-tab label="Lab Measurements ">
+    <app-lab-measurement [id]="id"></app-lab-measurement>
+  </mat-tab>
   <mat-tab label="Fluid Level">
-    <app-fluid-level-measurements></app-fluid-level-measurements>
+    <app-fluid-level-measurements [id]="id"></app-fluid-level-measurements>
   </mat-tab>
 </mat-tab-group>
