--- a/src/app/components/drilling-info/drilling-info.component.html
+++ b/src/app/components/drilling-info/drilling-info.component.html
@@ -34,7 +34,7 @@
               </button>
             </div>
             <div>
-              <app-add-new-drillinginfo
+              <app-add-new-drillinginfo [id]="id"
                 (closeModal)="closePopUpAndRefreshTable()"
               ></app-add-new-drillinginfo>
             </div>
@@ -59,8 +59,9 @@
           <table class="table table-bordered table-hover">
             <thead>
               <tr>
-                <th>#</th>
-                <th>id</th>
+                <th style="display: none">#</th>
+                <th style="display: none">id</th>
+                <th>well_id</th>
                 <th>release_date</th>
                 <th>well_description</th>
                 <th>well_type</th>
@@ -69,7 +70,6 @@
                 <th>tvd_depth</th>
                 <th>bbtp</th>
                 <th>production_general_info</th>
-                <th>well_id</th>
               </tr>
             </thead>
             <tbody>
@@ -80,8 +80,9 @@
                 "
                 [class.active]="currentIndex == HighlightRow"
               >
-                <td>{{ currentIndex + 1 }}</td>
-                <td>{{ drill.id }}</td>
+                <td style="display: none">{{ currentIndex + 1 }}</td>
+                <td style="display: none">{{ drill.id }}</td>
+                <td>{{ drill.wellId }}</td>
                 <td>{{ drill.releaseDate | date: "MM-dd-yyyy" }}</td>
                 <td>{{ drill.wellDescription }}</td>
                 <td>{{ drill.wellType }}</td>
@@ -90,7 +91,6 @@
                 <td>{{ drill.tvdDepth }}</td>
                 <td>{{ drill.bbtp }}</td>
                 <td>{{ drill.productionGeneralInfo }}</td>
-                <td>{{ drill.wellId }}</td>
               </tr>
             </tbody>
           </table>
