--- a/src/app/components/daily-actions/daily-actions.component.html
+++ b/src/app/components/daily-actions/daily-actions.component.html
@@ -17,7 +17,7 @@
 				  <span aria-hidden="true">×</span>
 				</button>
 			  </div>
-			  <app-add-new-report (closeModal)=closePopUpAndRefreshTable()></app-add-new-report>
+			  <app-add-new-report [id]="id" (closeModal)=closePopUpAndRefreshTable()></app-add-new-report>
 			</ng-template>
   
 			<ng-template #modalDataUpdate let-modal>
@@ -27,7 +27,7 @@
 				  <span aria-hidden="true">×</span>
 				</button>
 			  </div>
-			  <app-update-report [reportToBeUpdate]="reportToBeUpdate" (closeModal)=closePopUpAndRefreshTable()></app-update-report>
+			  <app-update-report [id]="id" [reportToBeUpdate]="reportToBeUpdate" (closeModal)=closePopUpAndRefreshTable()></app-update-report>
 			</ng-template>
   
 		  </div>
@@ -55,7 +55,7 @@
 				>
 				  <td style="display: none">{{ currentIndex + 1 }}</td>
 				  <td>{{report.id}}</td>
-				  <td>{{report.date | date: 'dd-MM-yyyy'}}</td>
+				  <td>{{report.date | date: 'MM-dd-yyyy'}}</td>
 				  <td>{{report.downTime}}</td>
 				  <td>{{report.losses}}</td>
 				  <td>{{report.siLVL4}}</td>
