--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -28,10 +28,10 @@
           <a mat-list-item routerLink="/concessions">
             <mat-icon>attach_money</mat-icon>
             Concessions</a>
-          <a mat-list-item routerLink="#">
+          <a mat-list-item routerLink="/fields">
             <mat-icon>notification_important</mat-icon>
             Fields</a>
-          <a mat-list-item routerLink="#">
+          <a mat-list-item routerLink="/wells">
             <mat-icon>notification_important</mat-icon>
             Wells</a>
         </mat-nav-list>
