--- a/src/app/components/app-add-new-well/app-add-new-well.component.html
+++ b/src/app/components/app-add-new-well/app-add-new-well.component.html
@@ -15,14 +15,24 @@
           </div>
           <br>
 
-
           <div class="lg-3">
-            <label for="formfieldId" class="form-label">fieldId</label>
-            <input formControlName="fieldId" type="number" class="form-control" placeholder="fieldId" id="formfieldId"/>
-            <div *ngIf="form.controls['fieldId'].invalid && ((form.controls['fieldId'].touched) || (this.form.controls['fieldId'].dirty))">
-              <small *ngIf="this.form.controls['fieldId'].hasError('required')" class="form-text text-danger">Please Enter The fieldId</small>
+            <label>Field:</label>
+            <select formControlName="field" class="form-control">
+              <option disabled>Select Field</option>
+              <option>Choose Field</option>
+              <option *ngFor="let field of fields" [value]='field.fieldId'>{{field.fieldName}}</option>
+            </select>
+            <div *ngIf="this.form.controls['field'].touched && this.form.controls['field'].invalid">
+              <small *ngIf="this.form.controls['field'].errors.required" class="form-text text-danger">Please Choose a Field</small>
             </div>
           </div>
+<!--          <div class="lg-3">-->
+<!--            <label for="formfieldId" class="form-label">fieldId</label>-->
+<!--            <input formControlName="fieldId" type="number" class="form-control" placeholder="fieldId" id="formfieldId"/>-->
+<!--            <div *ngIf="form.controls['fieldId'].invalid && ((form.controls['fieldId'].touched) || (this.form.controls['fieldId'].dirty))">-->
+<!--              <small *ngIf="this.form.controls['fieldId'].hasError('required')" class="form-text text-danger">Please Enter The fieldId</small>-->
+<!--            </div>-->
+<!--          </div>-->
           <br>
 
 
