table tabs page

--- a/src/app/components/fluid-level-measurements/add-new-flm/add-new-flm.component.html
+++ b/src/app/components/fluid-level-measurements/add-new-flm/add-new-flm.component.html
@@ -4,7 +4,7 @@
         <br />
         <div>
           <form [formGroup]="form">
-            <div class="lg-3">
+            <!-- <div class="lg-3">
               <label for="well">Well:</label>
               <select formControlName="well" class="form-control">
                 <option disabled>Select Well</option>
@@ -15,7 +15,7 @@
                 <small *ngIf="this.form.controls['well'].errors.required" class="form-text text-danger">Please Choose a Well</small>
             </div>
             </div>
-            <br>
+            <br> -->
 
             <div class="lg-3">
               <label for="formDate" class="form-label">Date</label>
