--- a/src/app/components/lab-measurement/add-new-lab/add-new-lab.component.html
+++ b/src/app/components/lab-measurement/add-new-lab/add-new-lab.component.html
@@ -3,10 +3,10 @@
     <div class="card-body">
       <br />
       <div>
-        <div class="lg-3">
+        <!-- <div class="lg-3">
           <label for="formWellId" class="form-label">WellId</label>
           <input type="number" [(ngModel)]="wellId" class="form-control" placeholder="wellId" id="formWellId" />
-        </div>
+        </div> -->
         <form [formGroup]="form">
           <br>
           <div class="lg-3">
@@ -14,8 +14,7 @@
             <input formControlName="date" type="date" class="form-control" placeholder="Date" id="formDate" />
             <div
               *ngIf="form.controls['date'].invalid && ((form.controls['date'].touched) || (this.form.controls['date'].dirty))">
-              <small *ngIf="this.form.controls['date'].hasError('required')" class="form-text text-danger">Please Pick a
-                Date</small>
+              <small *ngIf="this.form.controls['date'].hasError('required')" class="form-text text-danger">Please Pick a Date</small>
             </div>
           </div>
           <br>
@@ -32,16 +31,24 @@
           <div class="lg-3">
             <label for="formS1" class="form-label">S1</label>
             <input formControlName="s1" type="text" class="form-control" placeholder="S1" id="formS1" />
-            <small *ngIf="this.form.controls['s1'].hasError('required')" class="form-text text-danger">Please Enter The
-              S1</small>
+            <div
+              *ngIf="form.controls['s1'].invalid && ((form.controls['s1'].touched) || (this.form.controls['s1'].dirty))">
+              <small *ngIf="this.form.controls['s1'].hasError('required')" class="form-text text-danger">Please Enter The
+                S1</small>
+            </div>
+            
           </div>
           <br>
 
           <div class="lg-3">
             <label for="formS2" class="form-label">S2</label>
             <input formControlName="s2" type="number" class="form-control" placeholder="S2" id="formS2" />
-            <small *ngIf="this.form.controls['s2'].hasError('required')" class="form-text text-danger">Please Enter The
-              S2</small>
+            <div
+              *ngIf="form.controls['s2'].invalid && ((form.controls['s2'].touched) || (this.form.controls['s2'].dirty))">
+              <small *ngIf="this.form.controls['s2'].hasError('required')" class="form-text text-danger">Please Enter The
+                S2</small>
+            </div>
+            
           </div>
 
           <br>
@@ -50,16 +57,24 @@
           <div class="lg-3">
             <label for="formS3" class="form-label">S3</label>
             <input formControlName="s3" type="number" class="form-control" placeholder="S3" id="formS3" />
-            <small *ngIf="this.form.controls['s3'].hasError('required')" class="form-text text-danger">Please Enter The
-              S3</small>
+            <div
+              *ngIf="form.controls['s3'].invalid && ((form.controls['s3'].touched) || (this.form.controls['s3'].dirty))">
+              <small *ngIf="this.form.controls['s3'].hasError('required')" class="form-text text-danger">Please Enter The
+                S3</small>
+            </div>
+            
           </div>
           <br>
 
           <div class="lg-3">
             <label for="formS4" class="form-label">S4</label>
             <input formControlName="s4" type="number" class="form-control" placeholder="S4" id="formS4" />
-            <small *ngIf="this.form.controls['s4'].hasError('required')" class="form-text text-danger">Please Enter The
-              S4</small>
+            <div
+              *ngIf="form.controls['s4'].invalid && ((form.controls['s4'].touched) || (this.form.controls['s4'].dirty))">
+              <small *ngIf="this.form.controls['s4'].hasError('required')" class="form-text text-danger">Please Enter The
+                S4</small>
+            </div>
+            
           </div>
 
           <br>
@@ -67,8 +82,11 @@
           <div class="lg-3">
             <label for="formS5" class="form-label">S5</label>
             <input formControlName="s5" type="number" class="form-control" placeholder="S4" id="formS5" />
-            <small *ngIf="this.form.controls['s5'].hasError('required')" class="form-text text-danger">Please Enter The
-              S5</small>
+            <div
+              *ngIf="form.controls['s5'].invalid && ((form.controls['s5'].touched) || (this.form.controls['s5'].dirty))">
+              <small *ngIf="this.form.controls['s5'].hasError('required')" class="form-text text-danger">Please Enter The
+                S5</small>
+            </div>
           </div>
           <br>
           <button type="submit" class="btn btn-primary" (click)="insert()">Insert</button>
