removing field list from update well

--- a/src/app/components/well/app-update-well/app-update-well.component.html
+++ b/src/app/components/well/app-update-well/app-update-well.component.html
@@ -13,7 +13,7 @@
           </div>
           <br>
 
-          <div class="lg-3">
+          <!-- <div class="lg-3">
             <label>Field:</label>
             <select formControlName="field" class="form-control">
               <option disabled>Select Field</option>
@@ -23,7 +23,7 @@
             <div *ngIf="this.form.controls['field'].touched && this.form.controls['field'].invalid">
               <small *ngIf="this.form.controls['field'].errors.required" class="form-text text-danger">Please Choose a Field</small>
             </div>
-          </div>
+          </div> -->
 <!--          <div class="lg-3">-->
 <!--            <label for="formfieldId" class="form-label">fieldId</label>-->
 <!--            <input formControlName="fieldId" type="number" class="form-control" placeholder="fieldId" id="formfieldId"/>-->
